--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -20,9 +20,9 @@
 			
 			\vspace{\stretch{0.618}}
 			
-			{\Large \hfill \texttt{Martin Kostelník (xkoste12)}}\\
-			{\Large \hfill \texttt{Ivo Meixner (xmeixn00)}}\\
-			{\Large \today \hfill \texttt{Adam Gajda (xgajda07)}}
+			{\Large \hfill Martin Kostelník (\texttt{xkoste12})}\\
+			{\Large \hfill Ivo Meixner (\texttt{xmeixn00})}\\
+			{\Large \today \hfill Adam Gajda (\texttt{xgajda07})}
 		\end{center}
 	\end{titlepage}
 
