--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -28,7 +28,7 @@
 
 	\section{Klasifikace obličejů}
 
-		Klasifikátor obličejů je implenetován jako konvoluční neuronová síť. Systém byl vytvořen za pomoci knihovny Keras v jazyce Python.
+		Klasifikátor obličejů je implemetován jako konvoluční neuronová síť. Systém byl vytvořen za pomoci knihovny Keras v jazyce Python.
 
 		\subsection {Průběh implementace}
 			Původní plán byl vytvořit klasifikátor obličejů pomocí knihovny TFLearn. Úspěšně jsem model vytvořil a otestoval. Bohužel jsem ale nemohl najít optimální konfiguraci neuronové sítě a model nefungoval úplně správně. Většinou označil úplně všechny data jako non-target a výsledná přesnost byla tedy 0.8571, což je ale poměr obrázků non-targetu ku všem datům. Tento model tedy není funkční a ve finálním odevzdání nebyl použit. Z kódu ovšem odstraněn nebyl, byl pouze zakomentován a všechny jeho části jsou označeny komentáři.
